# Tab-Split

./: .gitignore  ARCHITECTURE.md  DEMO_SCRIPT.md  DESIGN_SYSTEM.md  PROJECT_BRIEF.md  README.md  download.py  package.json
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/design-system/: page.tsx
apps/web/src/app/nights/: page.tsx
apps/web/src/app/nights/[id]/: page.tsx
apps/web/src/components/custom/: ambient-background.tsx  circular-gallery.tsx  claim-bubble.tsx  claim-feed.tsx  cognee-proof-panel.tsx  cognee-teaser.tsx  confidence-gauge.tsx  evidence-upload.tsx  landing-hero.tsx  live-graph.tsx  parallax-hero.tsx  receipt-card.tsx  smooth-scroll.tsx  steps-gallery.tsx  three-background.tsx  timeline-scrubber.tsx  verdict-panel.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx
apps/web/src/contexts/: websocket-context.tsx
services/memory-engine/: debug.py  main.py  pyproject.toml  test_flow.py  ws_manager.py
