[tool.poetry]
name = "memory-engine"
version = "0.1.0"
description = "FastAPI backend for Tab Split, integrating Cognee"
authors = ["Tab Split Team"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
websockets = "^12.0"
cognee = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
